Testings on Job